[package]
name = "quiche_apps"
version = "0.1.0"
authors = ["Lucas Pardue <lucaspardue.24.7@gmail.com>"]
edition = "2018"
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["quiche/fuzzing"]

# Enable qlog support.
qlog = ["quiche/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["quiche/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["quiche/sfv"]

default = [ "sfv"]

[dependencies]
docopt = "1"
env_logger = "0.6"
mio = { version = "0.8", features = ["net", "os-poll"] }
url = "1"
log = { version = "0.4", features = ["release_max_level_error"] }
ring = "0.17"
quiche = { path = "../quiche" }
libc = "0.2"
nix = { version = "0.27.1", features = ["socket", "net", "uio"] }
slab = "0.4"
itertools = "0.10"
clap = { version = "4.1", features = ["derive"] }

[lib]
crate-type = ["lib"]
