[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = {version = "0.5.5", features = ["all"]}
clap = { version = "4.0.22", features = ["derive"] }
mio = { version = "1.0.2", features = ["net", "os-poll"] }
tokio = { version = "1.40.0", features = ["full"] }
rand = { version="0.8.4", features = ["small_rng"]}
env_logger = "0.6"
log = "0.4"